--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,18 @@ a {
   text-decoration: none;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #0a0a0a;
+  color: white;
+}
+
+h1 {
+  margin: 24px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
